need to fix gradle run issue